--- a/论文汇总.md
+++ b/论文汇总.md
@@ -142,116 +142,116 @@
 | 140  | 《Aspect-Aware Multimodal Summarization for Chinese E-Commerce Products》 |摘要生成 |
 | 141  | 《3D Convolutional Neural Networks for Human Action Recognition》 |视频分类 |
 | 142  | 《Aggregating local descriptors into a compact image representation》 |图片视频向量化（特征提取） |
-| 143  | 《NetVLAD: CNN architecture for weakly supervised place recognition》 |NULL |
-| 144  | 《NeXtVLAD: An Efficient Neural Network to Aggregate Frame-level Features for Large-scale Video Classification》 |NULL |
+| 143  | 《NetVLAD: CNN architecture for weakly supervised place recognition》 |图片视频向量化（特征提取） |
+| 144  | 《NeXtVLAD: An Efficient Neural Network to Aggregate Frame-level Features for Large-scale Video Classification》 |图片视频向量化（特征提取） |
 | 145  | 《First Order Motion Model for Image Animation》 |视觉应用 |
 | 146  | 《CNN ARCHITECTURES FOR LARGE-SCALE AUDIO CLASSIFICATION》 |智能语音 |
 | 147  | 《Multimodal Machine Learning: A Survey and Taxonomy》 |多模态 |
-| 148  | 《ERNIE-VIL: KNOWLEDGE ENHANCED VISION-LANGUAGE REPRESENTATIONS THROUGH SCENE GRAPH》 |NULL |
-| 149  | 《VideoBERT: A Joint Model for Video and Language Representation Learning》 |NULL |
-| 150  | 《VistaNet: Visual Aspect Attention Network for Multimodal Sentiment Analysis》 |NULL |
-| 151  | 《Supervised Multimodal Bitransformers for Classifying Images and Text》 |NULL |
-| 152  | 《Vilbert: Pretraining task-agnostic visiolinguistic representations for vision-and-language tasks》 |NULL |
-| 153  | 《Tensor fusion network for multimodal sentiment analysis》 |NULL |
+| 148  | 《ERNIE-VIL: KNOWLEDGE ENHANCED VISION-LANGUAGE REPRESENTATIONS THROUGH SCENE GRAPH》 |多模态 |
+| 149  | 《VideoBERT: A Joint Model for Video and Language Representation Learning》 |多模态 |
+| 150  | 《VistaNet: Visual Aspect Attention Network for Multimodal Sentiment Analysis》 |多模态 |
+| 151  | 《Supervised Multimodal Bitransformers for Classifying Images and Text》 |多模态 |
+| 152  | 《Vilbert: Pretraining task-agnostic visiolinguistic representations for vision-and-language tasks》 |多模态 |
+| 153  | 《Tensor fusion network for multimodal sentiment analysis》 |多模态 |
 | 154  | 《NetVLAD: CNN architecture for weakly supervised place recognition》 |序列特征处理 |
 | 155  | 《Neural Approaches to Conversational AI Question Answering, Task-Oriented Dialogues and Social Chatbots》 |务型对话 |
-| 156  | 《The Dialog State Tracking Challenge Series: A Review》 |NULL |
-| 157  | 《MACHINE LEARNING FOR DIALOG STATE TRACKING:A REVIEW》 |NULL |
-| 158  | 《Deep Neural Network Approach for the Dialog State Tracking Challenge》 |NULL |
-| 159  | 《BERT for Joint Intent Classifification and Slot Filling》 |NULL |
-| 160  | 《Task-Oriented Dialogue as Dataflow Synthesis》 |NULL |
-| 161  | 《Transferable Multi-Domain State Generator for Task-Oriented Dialogue Systems》 |NULL |
+| 156  | 《The Dialog State Tracking Challenge Series: A Review》 |务型对话 |
+| 157  | 《MACHINE LEARNING FOR DIALOG STATE TRACKING:A REVIEW》 |务型对话 |
+| 158  | 《Deep Neural Network Approach for the Dialog State Tracking Challenge》 |务型对话 |
+| 159  | 《BERT for Joint Intent Classifification and Slot Filling》 |务型对话 |
+| 160  | 《Task-Oriented Dialogue as Dataflow Synthesis》 |务型对话 |
+| 161  | 《Transferable Multi-Domain State Generator for Task-Oriented Dialogue Systems》 |务型对话 |
 | 162  | 《FAQ Retrieval using Query-Question Similarity and BERT-Based Query-Answer Relevance》 |QA对话 |
 | 163  | 《PLATO: Pre-trained Dialogue Generation Model with Discrete Latent Variable》 |闲聊对话&开放域问答 |
-| 164  | 《PLATO-2: Towards Building an Open-Domain Chatbot via Curriculum Learning》 |NULL |
-| 165  | 《Improving Multi-turn Dialogue Modelling with Utterance ReWriter》 |NULL |
-| 166  | 《Building End-To-End Dialogue Systems Using Generative Hierarchical Neural Network Models》 |NULL |
-| 167  | 《A Neural Conversational Model》 |NULL |
-| 168  | 《The Design and Implementation of XiaoIce, an Empathetic Social Chatbot》 |NULL |
-| 169  | 《Challenges in Building Intelligent Open-domain Dialog Systems》 |NULL |
+| 164  | 《PLATO-2: Towards Building an Open-Domain Chatbot via Curriculum Learning》 |闲聊对话&开放域问答 |
+| 165  | 《Improving Multi-turn Dialogue Modelling with Utterance ReWriter》 |闲聊对话&开放域问答 |
+| 166  | 《Building End-To-End Dialogue Systems Using Generative Hierarchical Neural Network Models》 |闲聊对话&开放域问答 |
+| 167  | 《A Neural Conversational Model》 |闲聊对话&开放域问答 |
+| 168  | 《The Design and Implementation of XiaoIce, an Empathetic Social Chatbot》 |闲聊对话&开放域问答 |
+| 169  | 《Challenges in Building Intelligent Open-domain Dialog Systems》 |闲聊对话&开放域问答 |
 | 170  | 《Introduction to Neural Network based Approaches for Question Answering over Knowledge Graphs》 |图谱问答 |
 | 171  | 《Know More about Each Other: Evolving Dialogue Strategy via Compound Assessment》 |对话评估&强化学习 |
 | 172  | 《A Survey of Techniques for Constructing Chinese Knowledge Graphs and Their Applications 》 |知识图谱综述 |
 | 173  | 《A Survey on Deep Learning for Named Entity Recognition》 |命名实体识别 |
-| 174  | 《Conditional Random Fields: Probabilistic Models for Segmenting and Labeling Sequence Data》 |NULL |
-| 175  | 《Bidirectional LSTM-CRF Models for Sequence Tagging》 |NULL |
-| 176  | 《Neural Architectures for Named Entity Recognition》 |NULL |
-| 177  | 《Chinese NER Using Lattice LSTM》 |NULL |
-| 178  | 《Simplify the Usage of Lexicon in Chinese NER》 |NULL |
-| 179  | 《Learning Named Entity Tagger using Domain-Specific Dictionary》 |NULL |
-| 180  | 《Neural Architectures for Fine-grained Entity Type Classification》 |NULL |
-| 181  | 《An attentive fine-grained entity typing model with latent type representation》 |NULL |
-| 182  | 《Hierarchical Entity Typing via Multi-level Learning to Rank》 |NULL |
-| 183  | 《Deep Exhaustive Model for Nested Named Entity Recognition》 |NULL |
-| 184  | 《A Boundary-aware Neural Model for Nested Named Entity Recognition》 |NULL |
-| 185  | 《TENER: Adapting Transformer Encoder for Named Entity Recognition》 |NULL |
-| 186  | 《Joint Learning of Named Entity Recognition and Entity Linking》 |NULL |
-| 187  | 《Multilingual Named Entity Recognition Using Pretrained Embeddings, Attention Mechanism and NCRF》 |NULL |
-| 188  | 《Hierarchically-Refined Label Attention Network for Sequence Labeling》 |NULL |
-| 189  | 《Fast and Accurate Entity Recognition with Iterated Dilated Convolutions》 |NULL |
+| 174  | 《Conditional Random Fields: Probabilistic Models for Segmenting and Labeling Sequence Data》 |命名实体识别 |
+| 175  | 《Bidirectional LSTM-CRF Models for Sequence Tagging》 |命名实体识别 |
+| 176  | 《Neural Architectures for Named Entity Recognition》 |命名实体识别 |
+| 177  | 《Chinese NER Using Lattice LSTM》 |命名实体识别 |
+| 178  | 《Simplify the Usage of Lexicon in Chinese NER》 |命名实体识别 |
+| 179  | 《Learning Named Entity Tagger using Domain-Specific Dictionary》 |命名实体识别 |
+| 180  | 《Neural Architectures for Fine-grained Entity Type Classification》 |命名实体识别 |
+| 181  | 《An attentive fine-grained entity typing model with latent type representation》 |命名实体识别 |
+| 182  | 《Hierarchical Entity Typing via Multi-level Learning to Rank》 |命名实体识别 |
+| 183  | 《Deep Exhaustive Model for Nested Named Entity Recognition》 |命名实体识别 |
+| 184  | 《A Boundary-aware Neural Model for Nested Named Entity Recognition》 |命名实体识别 |
+| 185  | 《TENER: Adapting Transformer Encoder for Named Entity Recognition》 |命名实体识别 |
+| 186  | 《Joint Learning of Named Entity Recognition and Entity Linking》 |命名实体识别 |
+| 187  | 《Multilingual Named Entity Recognition Using Pretrained Embeddings, Attention Mechanism and NCRF》 |命名实体识别 |
+| 188  | 《Hierarchically-Refined Label Attention Network for Sequence Labeling》 |命名实体识别 |
+| 189  | 《Fast and Accurate Entity Recognition with Iterated Dilated Convolutions》 |命名实体识别 |
 | 190  | 《Learning to Bootstrap for Entity Set Expansion》 |实体扩展 |
 | 191  | 《Classifying Relations by Ranking with Convolutional Neural Networks》 |关系抽取 |
-| 192  | 《End-to-End Relation Extraction using LSTMs on Sequences and Tree Structures》 |NULL |
-| 193  | 《Joint entity and relation extraction based on a hybrid neural network》 |NULL |
-| 194  | 《Joint Extraction of Entities and Relations Based on a Novel Tagging Scheme》 |NULL |
-| 195  | 《FewRel: A Large-Scale Supervised Few-Shot Relation Classification Dataset with State-of-the-Art Evaluation》 |NULL |
-| 196  | 《Joint Extraction of Entities and Relations with a Hierarchical Multi-task Tagging Model》 |NULL |
-| 197  | 《A Hierarchical Framework for Relation Extraction with Reinforcement Learning》 |NULL |
+| 192  | 《End-to-End Relation Extraction using LSTMs on Sequences and Tree Structures》 |关系抽取 |
+| 193  | 《Joint entity and relation extraction based on a hybrid neural network》 |关系抽取 |
+| 194  | 《Joint Extraction of Entities and Relations Based on a Novel Tagging Scheme》 |关系抽取 |
+| 195  | 《FewRel: A Large-Scale Supervised Few-Shot Relation Classification Dataset with State-of-the-Art Evaluation》 |关系抽取 |
+| 196  | 《Joint Extraction of Entities and Relations with a Hierarchical Multi-task Tagging Model》 |关系抽取 |
+| 197  | 《A Hierarchical Framework for Relation Extraction with Reinforcement Learning》 |关系抽取 |
 | 198  | 《Pre-training of Deep Contextualized Embeddings of Words and Entities for Named Entity Disambiguation》 |实体链接（消歧&归一化） |
 | 199  | 《Multimodal Attribute Extraction》 |属性抽取 |
 | 200  | 《Deep Learning based Recommender System: A Survey and New Perspectives》 |推荐 |
-| NULL  | 《推荐系统调研报告及综述》 |NULL |
-| NULL  | 《Deep Neural Networks for YouTube Recommendations》 |NULL |
-| NULL  | 《Deep Crossing: Web-Scale Modeling without Manually Crafted Combinatorial Features》 |NULL |
-| NULL  | 《Deep & Cross Network for Ad Click Predictions》 |NULL |
-| NULL  | 《MOBIUS: Towards the Next Generation of Query-Ad Matching in Baidu’s Sponsored Search》 |NULL |
-| NULL  | 《Sampling-Bias-Corrected Neural Modeling for Large Corpus Item Recommendations 》 |NULL |
-| NULL  | 《bipartite graph neural networks for efficient node representation learning》 |NULL |
-| NULL  | 《Wide & Deep Learning for Recommender Systems》 |NULL |
-| NULL  | 《SESSION-BASED RECOMMENDATIONS WITH RECURRENT NEURAL NETWORKS》 |NULL |
+| NULL  | 《推荐系统调研报告及综述》 |推荐 |
+| NULL  | 《Deep Neural Networks for YouTube Recommendations》 |推荐 |
+| NULL  | 《Deep Crossing: Web-Scale Modeling without Manually Crafted Combinatorial Features》 |推荐 |
+| NULL  | 《Deep & Cross Network for Ad Click Predictions》 |推荐 |
+| NULL  | 《MOBIUS: Towards the Next Generation of Query-Ad Matching in Baidu’s Sponsored Search》 |推荐 |
+| NULL  | 《Sampling-Bias-Corrected Neural Modeling for Large Corpus Item Recommendations 》 |推荐 |
+| NULL  | 《bipartite graph neural networks for efficient node representation learning》 |推荐 |
+| NULL  | 《Wide & Deep Learning for Recommender Systems》 |推荐 |
+| NULL  | 《SESSION-BASED RECOMMENDATIONS WITH RECURRENT NEURAL NETWORKS》 |推荐 |
 | NULL  | 《Semantic search on text and knowledge bases》 |搜索 |
-| NULL  | 《A Deep Generative Approach to Search Extrapolation and Recommendation》 |NULL |
+| NULL  | 《A Deep Generative Approach to Search Extrapolation and Recommendation》 |搜索 |
 | NULL  | 《A User-Centered Concept Mining System for Query and Document Understanding at Tencent》 |标签体系&标签扩展&兴趣标签&概念标签 |
-| NULL  | 《GIANT: Scalable Creation of a Web-scale Ontology》 |NULL |
-| NULL  | 《Meta-Learning for Qery Conceptualization at Web Scale》 |NULL |
-| NULL  | 《AliCoCo: Alibaba E-commerce Cognitive Concept Net》 |NULL |
-| NULL  | 《Octet: Online Catalog Taxonomy Enrichment with Self-Supervision》 |NULL |
+| NULL  | 《GIANT: Scalable Creation of a Web-scale Ontology》 |标签体系&标签扩展&兴趣标签&概念标签 |
+| NULL  | 《Meta-Learning for Qery Conceptualization at Web Scale》 |标签体系&标签扩展&兴趣标签&概念标签 |
+| NULL  | 《AliCoCo: Alibaba E-commerce Cognitive Concept Net》 |标签体系&标签扩展&兴趣标签&概念标签 |
+| NULL  | 《Octet: Online Catalog Taxonomy Enrichment with Self-Supervision》 |标签体系&标签扩展&兴趣标签&概念标签 |
 | NULL  | 《Scaling Up Open Tagging from Tens to Thousands: Comprehension Empowered Attribute Value Extraction from Product Title》 |标签生成 |
-| NULL  | 《Microblog Hashtag Generation via Encoding Conversation Contexts》 |NULL |
+| NULL  | 《Microblog Hashtag Generation via Encoding Conversation Contexts》 |标签生成 |
 | NULL  | 《Cognitive Representation Learning of Self-Media Online Article Quality》 |文本审核&质量 |
-| NULL  | 《Spam Review Detection with Graph Convolutional Networks》 |NULL |
-| NULL  | 《Abusive Language Detection with Graph Convolutional Networks》 |NULL |
-| NULL  | 《Weak Supervision for Fake News Detection via Reinforcement Learning》 |NULL |
+| NULL  | 《Spam Review Detection with Graph Convolutional Networks》 |文本审核&质量 |
+| NULL  | 《Abusive Language Detection with Graph Convolutional Networks》 |文本审核&质量 |
+| NULL  | 《Weak Supervision for Fake News Detection via Reinforcement Learning》 |文本审核&质量 |
 | NULL  | 《Coherent Comment Generation for Chinese Articles with a Graph-to-Sequence Model》 |评论生成&改写 |
 | NULL  | 《Deep Active Learning for Short-Text Classification》 |主动学习 |
 | NULL  | 《EDA: Easy Data Augmentation Techniques for Boosting Performance on Text Classification Tasks》 |数据增强 |
 | NULL  | 《UNSUPERVISED DATA AUGMENTATION FOR CONSISTENCY TRAINING》 |半监督学习 |
-| NULL  | 《Data Programming:Creating Large Training Sets, Quickly》 |NULL |
-| NULL  | 《Rethinking the Value of Labels for Improving Class-Imbalanced Learning》 |NULL |
+| NULL  | 《Data Programming:Creating Large Training Sets, Quickly》 |半监督学习 |
+| NULL  | 《Rethinking the Value of Labels for Improving Class-Imbalanced Learning》 |半监督学习 |
 | NULL  | 《Extreme Multi-label Loss Functions for Recommendation,Tagging, Ranking & Other Missing Label Applications》 |多标签残缺 |
-| NULL  | 《基于不完整标签信息的多标签分类问题研究》 |NULL |
+| NULL  | 《基于不完整标签信息的多标签分类问题研究》 |多标签残缺 |
 | NULL  | 《Dice loss for data-imbalance NLP tasks》 |样本不均衡 |
-| NULL  | 《Meta-Weight-Net: Learning an Explicit Mapping For Sample Weighting》 |NULL |
+| NULL  | 《Meta-Weight-Net: Learning an Explicit Mapping For Sample Weighting》 |样本不均衡 |
 | NULL  | 《ehensive Introduction to Label Noise》 |噪声标签 |
-| NULL  | 《Classification in the Presence of Label Noise: a Survey》 |NULL |
-| NULL  | 《Image Classification with Deep Learning in the Presence of Noisy Labels: A Survey》 |NULL |
-| NULL  | 《Confident Learning: Estimating Uncertainty in Dataset Labels》 |NULL |
-| NULL  | 《Co-teaching: Robust Training of Deep Neural Networks with Extremely Noisy Labels》 |NULL |
-| NULL  | 《Learning with Noisy Label-深度学习廉价落地》 |NULL |
+| NULL  | 《Classification in the Presence of Label Noise: a Survey》 |噪声标签 |
+| NULL  | 《Image Classification with Deep Learning in the Presence of Noisy Labels: A Survey》 |噪声标签 |
+| NULL  | 《Confident Learning: Estimating Uncertainty in Dataset Labels》 |噪声标签 |
+| NULL  | 《Co-teaching: Robust Training of Deep Neural Networks with Extremely Noisy Labels》 |噪声标签 |
+| NULL  | 《Learning with Noisy Label-深度学习廉价落地》 |噪声标签 |
 | NULL  | 《TextBrewer: An Open-Source Knowledge Distillation Toolkit for Natural Language Processing》 |知识蒸馏 |
 | NULL  | 《Mixed Precision Training》 |量化加速 |
 | NULL  | 《Why Should I Trust You? : Explaning the Predictions of Any Classifier》 |模型可解释性 |
-| NULL  | 《Analyzing and Interpreting Neural Networks for NLP: A Report on the First BlackboxNLP Workshop》 |NULL |
+| NULL  | 《Analyzing and Interpreting Neural Networks for NLP: A Report on the First BlackboxNLP Workshop》 |模型可解释性 |
 | NULL  | 《NeuralClassifier: An Open-source Neural Hierarchical Multi-label Text Classification Toolkit》 |算法框架&工具 |
-| NULL  | 《Familia: A Configurable Topic Modeling Framework for Industrial Text Engineering》 |NULL |
-| NULL  | 《LightLDA: Big Topic Models on Modest Computer Clusters》 |NULL |
-| NULL  | 《DeepPavlov: Open-Source Library for Dialogue Systems》 |NULL |
-| NULL  | 《AllenNLP Interpret: A Framework for Explaining Predictions of NLP Models》 |NULL |
+| NULL  | 《Familia: A Configurable Topic Modeling Framework for Industrial Text Engineering》 |算法框架&工具 |
+| NULL  | 《LightLDA: Big Topic Models on Modest Computer Clusters》 |算法框架&工具 |
+| NULL  | 《DeepPavlov: Open-Source Library for Dialogue Systems》 |算法框架&工具 |
+| NULL  | 《AllenNLP Interpret: A Framework for Explaining Predictions of NLP Models》 |算法框架&工具 |
 | NULL  | 《Neural Network Models for Paraphrase Identification, Semantic Textual Similarity, Natural Language Inference, and Question Answering》 |其他 |
-| NULL  | 《Analysis Methods in Neural Language Processing: A Survey》 |NULL |
-| NULL  | 《Deep Double Descent: Where Bigger Models and More Data Hurt》 |NULL |
-| NULL  | 《中文信息处理发展报告》 |NULL |
-| NULL  | 《Modern Deep Learning Techniques Applied to Natural Language Processing》 |NULL |
+| NULL  | 《Analysis Methods in Neural Language Processing: A Survey》 |其他 |
+| NULL  | 《Deep Double Descent: Where Bigger Models and More Data Hurt》 |其他 |
+| NULL  | 《中文信息处理发展报告》 |其他 |
+| NULL  | 《Modern Deep Learning Techniques Applied to Natural Language Processing》 |其他 |
 | NULL  | NULL |NULL |
 | NULL  | NULL |NULL |
 | NULL  | NULL |NULL |
