--- a/论文汇总.md
+++ b/论文汇总.md
@@ -200,58 +200,58 @@
 | 198  | 《Pre-training of Deep Contextualized Embeddings of Words and Entities for Named Entity Disambiguation》 |实体链接（消歧&归一化） |
 | 199  | 《Multimodal Attribute Extraction》 |属性抽取 |
 | 200  | 《Deep Learning based Recommender System: A Survey and New Perspectives》 |推荐 |
-| NULL  | 《推荐系统调研报告及综述》 |推荐 |
-| NULL  | 《Deep Neural Networks for YouTube Recommendations》 |推荐 |
-| NULL  | 《Deep Crossing: Web-Scale Modeling without Manually Crafted Combinatorial Features》 |推荐 |
-| NULL  | 《Deep & Cross Network for Ad Click Predictions》 |推荐 |
-| NULL  | 《MOBIUS: Towards the Next Generation of Query-Ad Matching in Baidu’s Sponsored Search》 |推荐 |
-| NULL  | 《Sampling-Bias-Corrected Neural Modeling for Large Corpus Item Recommendations 》 |推荐 |
-| NULL  | 《bipartite graph neural networks for efficient node representation learning》 |推荐 |
-| NULL  | 《Wide & Deep Learning for Recommender Systems》 |推荐 |
-| NULL  | 《SESSION-BASED RECOMMENDATIONS WITH RECURRENT NEURAL NETWORKS》 |推荐 |
-| NULL  | 《Semantic search on text and knowledge bases》 |搜索 |
-| NULL  | 《A Deep Generative Approach to Search Extrapolation and Recommendation》 |搜索 |
-| NULL  | 《A User-Centered Concept Mining System for Query and Document Understanding at Tencent》 |标签体系&标签扩展&兴趣标签&概念标签 |
-| NULL  | 《GIANT: Scalable Creation of a Web-scale Ontology》 |标签体系&标签扩展&兴趣标签&概念标签 |
-| NULL  | 《Meta-Learning for Qery Conceptualization at Web Scale》 |标签体系&标签扩展&兴趣标签&概念标签 |
-| NULL  | 《AliCoCo: Alibaba E-commerce Cognitive Concept Net》 |标签体系&标签扩展&兴趣标签&概念标签 |
-| NULL  | 《Octet: Online Catalog Taxonomy Enrichment with Self-Supervision》 |标签体系&标签扩展&兴趣标签&概念标签 |
-| NULL  | 《Scaling Up Open Tagging from Tens to Thousands: Comprehension Empowered Attribute Value Extraction from Product Title》 |标签生成 |
-| NULL  | 《Microblog Hashtag Generation via Encoding Conversation Contexts》 |标签生成 |
-| NULL  | 《Cognitive Representation Learning of Self-Media Online Article Quality》 |文本审核&质量 |
-| NULL  | 《Spam Review Detection with Graph Convolutional Networks》 |文本审核&质量 |
-| NULL  | 《Abusive Language Detection with Graph Convolutional Networks》 |文本审核&质量 |
-| NULL  | 《Weak Supervision for Fake News Detection via Reinforcement Learning》 |文本审核&质量 |
-| NULL  | 《Coherent Comment Generation for Chinese Articles with a Graph-to-Sequence Model》 |评论生成&改写 |
-| NULL  | 《Deep Active Learning for Short-Text Classification》 |主动学习 |
-| NULL  | 《EDA: Easy Data Augmentation Techniques for Boosting Performance on Text Classification Tasks》 |数据增强 |
-| NULL  | 《UNSUPERVISED DATA AUGMENTATION FOR CONSISTENCY TRAINING》 |半监督学习 |
-| NULL  | 《Data Programming:Creating Large Training Sets, Quickly》 |半监督学习 |
-| NULL  | 《Rethinking the Value of Labels for Improving Class-Imbalanced Learning》 |半监督学习 |
-| NULL  | 《Extreme Multi-label Loss Functions for Recommendation,Tagging, Ranking & Other Missing Label Applications》 |多标签残缺 |
-| NULL  | 《基于不完整标签信息的多标签分类问题研究》 |多标签残缺 |
-| NULL  | 《Dice loss for data-imbalance NLP tasks》 |样本不均衡 |
-| NULL  | 《Meta-Weight-Net: Learning an Explicit Mapping For Sample Weighting》 |样本不均衡 |
-| NULL  | 《ehensive Introduction to Label Noise》 |噪声标签 |
-| NULL  | 《Classification in the Presence of Label Noise: a Survey》 |噪声标签 |
-| NULL  | 《Image Classification with Deep Learning in the Presence of Noisy Labels: A Survey》 |噪声标签 |
-| NULL  | 《Confident Learning: Estimating Uncertainty in Dataset Labels》 |噪声标签 |
-| NULL  | 《Co-teaching: Robust Training of Deep Neural Networks with Extremely Noisy Labels》 |噪声标签 |
-| NULL  | 《Learning with Noisy Label-深度学习廉价落地》 |噪声标签 |
-| NULL  | 《TextBrewer: An Open-Source Knowledge Distillation Toolkit for Natural Language Processing》 |知识蒸馏 |
-| NULL  | 《Mixed Precision Training》 |量化加速 |
-| NULL  | 《Why Should I Trust You? : Explaning the Predictions of Any Classifier》 |模型可解释性 |
-| NULL  | 《Analyzing and Interpreting Neural Networks for NLP: A Report on the First BlackboxNLP Workshop》 |模型可解释性 |
-| NULL  | 《NeuralClassifier: An Open-source Neural Hierarchical Multi-label Text Classification Toolkit》 |算法框架&工具 |
-| NULL  | 《Familia: A Configurable Topic Modeling Framework for Industrial Text Engineering》 |算法框架&工具 |
-| NULL  | 《LightLDA: Big Topic Models on Modest Computer Clusters》 |算法框架&工具 |
-| NULL  | 《DeepPavlov: Open-Source Library for Dialogue Systems》 |算法框架&工具 |
-| NULL  | 《AllenNLP Interpret: A Framework for Explaining Predictions of NLP Models》 |算法框架&工具 |
-| NULL  | 《Neural Network Models for Paraphrase Identification, Semantic Textual Similarity, Natural Language Inference, and Question Answering》 |其他 |
-| NULL  | 《Analysis Methods in Neural Language Processing: A Survey》 |其他 |
-| NULL  | 《Deep Double Descent: Where Bigger Models and More Data Hurt》 |其他 |
-| NULL  | 《中文信息处理发展报告》 |其他 |
-| NULL  | 《Modern Deep Learning Techniques Applied to Natural Language Processing》 |其他 |
+| 201  | 《推荐系统调研报告及综述》 |推荐 |
+| 202  | 《Deep Neural Networks for YouTube Recommendations》 |推荐 |
+| 203  | 《Deep Crossing: Web-Scale Modeling without Manually Crafted Combinatorial Features》 |推荐 |
+| 204  | 《Deep & Cross Network for Ad Click Predictions》 |推荐 |
+| 205  | 《MOBIUS: Towards the Next Generation of Query-Ad Matching in Baidu’s Sponsored Search》 |推荐 |
+| 206  | 《Sampling-Bias-Corrected Neural Modeling for Large Corpus Item Recommendations 》 |推荐 |
+| 207  | 《bipartite graph neural networks for efficient node representation learning》 |推荐 |
+| 208  | 《Wide & Deep Learning for Recommender Systems》 |推荐 |
+| 209  | 《SESSION-BASED RECOMMENDATIONS WITH RECURRENT NEURAL NETWORKS》 |推荐 |
+| 210  | 《Semantic search on text and knowledge bases》 |搜索 |
+| 211  | 《A Deep Generative Approach to Search Extrapolation and Recommendation》 |搜索 |
+| 212  | 《A User-Centered Concept Mining System for Query and Document Understanding at Tencent》 |标签体系&标签扩展&兴趣标签&概念标签 |
+| 213  | 《GIANT: Scalable Creation of a Web-scale Ontology》 |标签体系&标签扩展&兴趣标签&概念标签 |
+| 214  | 《Meta-Learning for Qery Conceptualization at Web Scale》 |标签体系&标签扩展&兴趣标签&概念标签 |
+| 215  | 《AliCoCo: Alibaba E-commerce Cognitive Concept Net》 |标签体系&标签扩展&兴趣标签&概念标签 |
+| 216  | 《Octet: Online Catalog Taxonomy Enrichment with Self-Supervision》 |标签体系&标签扩展&兴趣标签&概念标签 |
+| 217  | 《Scaling Up Open Tagging from Tens to Thousands: Comprehension Empowered Attribute Value Extraction from Product Title》 |标签生成 |
+| 218  | 《Microblog Hashtag Generation via Encoding Conversation Contexts》 |标签生成 |
+| 219  | 《Cognitive Representation Learning of Self-Media Online Article Quality》 |文本审核&质量 |
+| 220  | 《Spam Review Detection with Graph Convolutional Networks》 |文本审核&质量 |
+| 221  | 《Abusive Language Detection with Graph Convolutional Networks》 |文本审核&质量 |
+| 222  | 《Weak Supervision for Fake News Detection via Reinforcement Learning》 |文本审核&质量 |
+| 223  | 《Coherent Comment Generation for Chinese Articles with a Graph-to-Sequence Model》 |评论生成&改写 |
+| 224  | 《Deep Active Learning for Short-Text Classification》 |主动学习 |
+| 225  | 《EDA: Easy Data Augmentation Techniques for Boosting Performance on Text Classification Tasks》 |数据增强 |
+| 226  | 《UNSUPERVISED DATA AUGMENTATION FOR CONSISTENCY TRAINING》 |半监督学习 |
+| 227  | 《Data Programming:Creating Large Training Sets, Quickly》 |半监督学习 |
+| 228  | 《Rethinking the Value of Labels for Improving Class-Imbalanced Learning》 |半监督学习 |
+| 229  | 《Extreme Multi-label Loss Functions for Recommendation,Tagging, Ranking & Other Missing Label Applications》 |多标签残缺 |
+| 230  | 《基于不完整标签信息的多标签分类问题研究》 |多标签残缺 |
+| 231  | 《Dice loss for data-imbalance NLP tasks》 |样本不均衡 |
+| 232  | 《Meta-Weight-Net: Learning an Explicit Mapping For Sample Weighting》 |样本不均衡 |
+| 233  | 《ehensive Introduction to Label Noise》 |噪声标签 |
+| 234  | 《Classification in the Presence of Label Noise: a Survey》 |噪声标签 |
+| 235  | 《Image Classification with Deep Learning in the Presence of Noisy Labels: A Survey》 |噪声标签 |
+| 236  | 《Confident Learning: Estimating Uncertainty in Dataset Labels》 |噪声标签 |
+| 237  | 《Co-teaching: Robust Training of Deep Neural Networks with Extremely Noisy Labels》 |噪声标签 |
+| 238  | 《Learning with Noisy Label-深度学习廉价落地》 |噪声标签 |
+| 239  | 《TextBrewer: An Open-Source Knowledge Distillation Toolkit for Natural Language Processing》 |知识蒸馏 |
+| 240  | 《Mixed Precision Training》 |量化加速 |
+| 241  | 《Why Should I Trust You? : Explaning the Predictions of Any Classifier》 |模型可解释性 |
+| 242  | 《Analyzing and Interpreting Neural Networks for NLP: A Report on the First BlackboxNLP Workshop》 |模型可解释性 |
+| 243  | 《NeuralClassifier: An Open-source Neural Hierarchical Multi-label Text Classification Toolkit》 |算法框架&工具 |
+| 244  | 《Familia: A Configurable Topic Modeling Framework for Industrial Text Engineering》 |算法框架&工具 |
+| 245  | 《LightLDA: Big Topic Models on Modest Computer Clusters》 |算法框架&工具 |
+| 246  | 《DeepPavlov: Open-Source Library for Dialogue Systems》 |算法框架&工具 |
+| 247  | 《AllenNLP Interpret: A Framework for Explaining Predictions of NLP Models》 |算法框架&工具 |
+| 248  | 《Neural Network Models for Paraphrase Identification, Semantic Textual Similarity, Natural Language Inference, and Question Answering》 |其他 |
+| 249  | 《Analysis Methods in Neural Language Processing: A Survey》 |其他 |
+| 250  | 《Deep Double Descent: Where Bigger Models and More Data Hurt》 |其他 |
+| 251  | 《中文信息处理发展报告》 |其他 |
+| 252  | 《Modern Deep Learning Techniques Applied to Natural Language Processing》 |其他 |
 | NULL  | NULL |NULL |
 | NULL  | NULL |NULL |
 | NULL  | NULL |NULL |
