--- a/论文汇总.md
+++ b/论文汇总.md
@@ -252,11 +252,11 @@
 | 250  | 《Deep Double Descent: Where Bigger Models and More Data Hurt》 |其他 |
 | 251  | 《中文信息处理发展报告》 |其他 |
 | 252  | 《Modern Deep Learning Techniques Applied to Natural Language Processing》 |其他 |
-| NULL  | NULL |NULL |
-| NULL  | NULL |NULL |
-| NULL  | NULL |NULL |
-| NULL  | NULL |NULL |
-| NULL  | NULL |NULL |
+| 253  | 《ImageNet Classification with Deep Convolutional Neural Networks》 |CNN |
+| 254  | 《Network In Network》 |CNN |
+| 255  | 《VERY DEEP CONVOLUTIONAL NETWORKS FOR LARGE-SCALE IMAGE RECOGNITION》 |CNN |
+| 256  | 《Going deeper with convolutions》 |CNN |
+| 257  | 《Deep Residual Learning for Image Recognition》 |CNN |
 | NULL  | NULL |NULL |
 | NULL  | NULL |NULL |
 | NULL  | NULL |NULL |
