--- a/3D视觉.md
+++ b/3D视觉.md
@@ -1,3 +1,4 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
+| 《PointNet: Deep Learning on Point Sets for 3D Classification and Segmentation》| CVPR 2017|基于3D点云是分类和分割：没怎么看懂|NULL |中文翻译：https://zhuanlan.zhihu.com/p/369059467|
 | NULL  | NULL |NULL |NULL |NULL |
