--- a/论文汇总.md
+++ b/论文汇总.md
@@ -257,11 +257,11 @@
 | 255  | 《VERY DEEP CONVOLUTIONAL NETWORKS FOR LARGE-SCALE IMAGE RECOGNITION》 |CNN |
 | 256  | 《Going deeper with convolutions》 |CNN |
 | 257  | 《Deep Residual Learning for Image Recognition》 |CNN |
-| NULL  | NULL |NULL |
-| NULL  | NULL |NULL |
-| NULL  | NULL |NULL |
-| NULL  | NULL |NULL |
-| NULL  | NULL |NULL |
+| 258  | 《Deep Residual Learning for Image Recognition》 |CNN |
+| 259  | 《Aggregated Residual Transformations for Deep Neural Networks》 |CNN |
+| 260  | 《FRACTALNET:ULTRA-DEEP NEURAL NETWORKS WITHOUT RESIDUALS》 |CNN |
+| 261  | 《Finding Structure in Time 》 |RNN |
+| 262  | 《PointNet: Deep Learning on Point Sets for 3D Classification and Segmentation》 |3D视觉 |
 | NULL  | NULL |NULL |
 | NULL  | NULL |NULL |
 | NULL  | NULL |NULL |
