--- a/图像增强_去噪_生成.md
+++ b/图像增强_去噪_生成.md
@@ -1,3 +1,4 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
+| 《Moire Photo Restoration Using Multiresolution Convolutional Neural Networks》| IEEE Transactions on Image Processing 2018|基于深度学习的去摩尔纹：<br/>1 作者认为不同的尺度是负责处理不同的摩尔纹;|NULL |参考：https://blog.csdn.net/u013063099/article/details/88716689|
 | NULL  | NULL |NULL |NULL |NULL |
