--- a/论文汇总.md
+++ b/论文汇总.md
@@ -262,7 +262,7 @@
 | 260  | 《FRACTALNET:ULTRA-DEEP NEURAL NETWORKS WITHOUT RESIDUALS》 |CNN |
 | 261  | 《Finding Structure in Time 》 |RNN |
 | 262  | 《PointNet: Deep Learning on Point Sets for 3D Classification and Segmentation》 |3D视觉 |
-| NULL  | NULL |NULL |
+| 263  | 《Moire Photo Restoration Using Multiresolution Convolutional Neural Networks》 |图像增强/去噪/生成 |
 | NULL  | NULL |NULL |
 | NULL  | NULL |NULL |
 | NULL  | NULL |NULL |
