--- a/对抗攻击.md
+++ b/对抗攻击.md
@@ -2,7 +2,7 @@
 |  ----  | ----  |----  | ----  |----  |
 | 《Adversarial Attacks on Deep Learning Models in Natural Language Processing: A Survey》| arXiv 2019|NLP对抗攻击综述：<br/>1 INTRODUCTION<br/>2 OVERVIEW OF ADVERSARIAL ATTACKS AND DEEP LEARNING TECHNIQUES IN NATURAL LANGUAGE PROCESSING<br/>3 FROM IMAGE TO TEXT<br/>4 ATTACKING NEURAL MODELS IN NLP: STATE-OF-THE-ART<br/>5 DEFENSE<br/>6 DISCUSSIONS AND OPEN ISSUES<br/>7 CONCLUSION|NULL |NULL |
 | 《TextAttack: A Framework for Adversarial Attacks, Data Augmentation, and Adversarial Training in NLP》| arXiv 2020|文本对抗攻击、数据增强和对抗训练|NULL |官网： https://textattack.readthedocs.io/en/latest/index.html<br/>介绍视频：https://textattack.readthedocs.io/en/latest/1start/talks-visualization.html#dr-qi-s-summary-tutorial-talk-on-textattack|
-| 《TextAttack: A Framework for Adversarial Attacks, Data Augmentation, and Adversarial Training in NLP》| ArXiv2020|文本对抗攻击框架|项目地址：https://textattack.readthedocs.io/en/latest/# <br/> 清华OpenAttack：https://github.com/thunlp/OpenAttack|NULL |
+| 《TextAttack: A Framework for Adversarial Attacks, Data Augmentation, and Adversarial Training in NLP》| ArXiv2020|文本对抗攻击框架|NULL|项目地址：https://textattack.readthedocs.io/en/latest/# <br/> 清华OpenAttack：https://github.com/thunlp/OpenAttack|
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
