--- a/论文汇总.md
+++ b/论文汇总.md
@@ -263,7 +263,7 @@
 | 261  | 《Finding Structure in Time 》 |RNN |
 | 262  | 《PointNet: Deep Learning on Point Sets for 3D Classification and Segmentation》 |3D视觉 |
 | 263  | 《Moire Photo Restoration Using Multiresolution Convolutional Neural Networks》 |图像增强/去噪/生成 |
-| NULL  | NULL |NULL |
+| 264  | 《TextAttack: A Framework for Adversarial Attacks, Data Augmentation, and Adversarial Training in NLP》 |对抗攻击 |
 | NULL  | NULL |NULL |
 | NULL  | NULL |NULL |
 | NULL  | NULL |NULL |
