--- a/多模态.md
+++ b/多模态.md
@@ -9,7 +9,8 @@
 | 《Supervised Multimodal Bitransformers for Classifying Images and Text》  | NULL |Facebook多模态模型 |NULL |NULL |
 | 《Vilbert: Pretraining task-agnostic visiolinguistic representations for vision-and-language tasks》  | NIPS2019 |文本/图片多模态BERT |NULL |NULL |
 | 《Tensor fusion network for multimodal sentiment analysis》| EMNLP 2017|多模态融合TFN:<br/>1 多个模态的向量进行融合操作形成多维Tensor；<br/>2 注意每个维度增加的“1”，这样可以保留单维和双维特征；<br/>3 缺点是参数量巨大，注意体现在多模态融合的多维Tensor和后续接的Dense层；|NULL |《让机器读懂视频：亿级淘宝视频背后的多模态AI算法揭秘》|| 《Efficient Low-rank Multimodal Fusion with Modality-Specific Factors》| ACL 2018|多模态融合LMF:<br/>1 对TFN的优化；<br/>2 注意是对多模态融合Tensor和Dense参数进行分解，进而减少参数量和计算量；|NULL |《让机器读懂视频：亿级淘宝视频背后的多模态AI算法揭秘》|
-| NULL  | NULL |NULL |NULL |NULL |
+| 跨模态  | NULL |NULL |NULL |NULL |
+| 《UNIMO: Towards Unified-Modal Understanding and Generation via Cross-Modal Contrastive Learning》| ACL2021|百度UNIMO：<br/>1 文本/图像、文本-图像统一模态预训练模型；<br/>2 通过文本改写和图像/文本相似检索扩充pair语料；<br/>3 通过文本-图片多模、文本/图片单模多个任务进行预训练；<br/>4 只有文本-图像多模、文本单模的实验，没有图像的单模实验；<br/>5 图像单模预训练中，回归被mask的图像特征；|NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
