--- a/语义分割.md
+++ b/语义分割.md
@@ -1,3 +1,4 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
+| 《Fully Convolutional Networks for Semantic Segmentation》| CVPR2015|FCN：经典的语义分割深度网络|NULL |参考：<br/>https://zhuanlan.zhihu.com/p/32037333<br/>https://zhuanlan.zhihu.com/p/31428783|
 | NULL  | NULL |NULL |NULL |NULL |
