--- a/论文汇总.md
+++ b/论文汇总.md
@@ -264,10 +264,10 @@
 | 262  | 《PointNet: Deep Learning on Point Sets for 3D Classification and Segmentation》 |3D视觉 |
 | 263  | 《Moire Photo Restoration Using Multiresolution Convolutional Neural Networks》 |图像增强/去噪/生成 |
 | 264  | 《TextAttack: A Framework for Adversarial Attacks, Data Augmentation, and Adversarial Training in NLP》 |对抗攻击 |
-| NULL  | 《UNIMO: Towards Unified-Modal Understanding and Generation via Cross-Modal Contrastive Learning》 |多模态 |
-| NULL  | 《DeepFace: Closing the Gap to Human-Level Performance in Face Verification》 |人脸识别 |
-| NULL  | 《End-to-End Text Recognition with Convolutional Neural Networks》 |OCR |
-| NULL  | NULL |NULL |
+| 265  | 《UNIMO: Towards Unified-Modal Understanding and Generation via Cross-Modal Contrastive Learning》 |多模态 |
+| 266  | 《DeepFace: Closing the Gap to Human-Level Performance in Face Verification》 |人脸识别 |
+| 267  | 《End-to-End Text Recognition with Convolutional Neural Networks》 |OCR |
+| 268  | 《Fully Convolutional Networks for Semantic Segmentation》 |语义分割 |
 | NULL  | NULL |NULL |
 | NULL  | NULL |NULL |
 | NULL  | NULL |NULL |
