--- a/数据增强.md
+++ b/数据增强.md
@@ -1,5 +1,6 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
+ | 《See Better Before Looking Closer: Weakly Supervised Data Augmentation Network for Fine-Grained Visual Classification》| arxiv 2019|WS-DAN：<br/>1 更高效的数据增强方法（有目的性的crop和drop）；<br/>2 有效的关注局部特征；|NULL |NULL |
 | 《EDA: Easy Data Augmentation Techniques for Boosting Performance on Text Classification Tasks》  | EMNLP2019 |四种操作：同义替换，随机插入，随机删除，随机交换；<br/>更试用于小样本场景； |done |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
