--- a/论文汇总.md
+++ b/论文汇总.md
@@ -1,10 +1,31 @@
 |  名称   | 目录  |
 | ----  |----  | 
 | NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| 《See Better Before Looking Closer: Weakly Supervised Data Augmentation Network for Fine-Grained Visual Classification》 |数据增强 |
+|《Grad-CAM:Visual Explanations from Deep Networks via Gradient-based Localization》|模型可解释性|
+| 《PointNet: Deep Learning on Point Sets for 3D Classification and Segmentation》 |3D视觉 |
+| 《Moire Photo Restoration Using Multiresolution Convolutional Neural Networks》 |图像增强/去噪/生成 |
+| 《TextAttack: A Framework for Adversarial Attacks, Data Augmentation, and Adversarial Training in NLP》 |对抗攻击 |
+| 《UNIMO: Towards Unified-Modal Understanding and Generation via Cross-Modal Contrastive Learning》 |多模态 |
+| 《DeepFace: Closing the Gap to Human-Level Performance in Face Verification》 |人脸识别 |
+| 《End-to-End Text Recognition with Convolutional Neural Networks》 |OCR |
+| 《Fully Convolutional Networks for Semantic Segmentation》 |语义分割 |
 | 《You Only Look Once: Unified, Real-Time Object Detection》 |目标检测 |
 | 《Faster R-CNN: Towards Real-Time Object Detection with Region Proposal Networks》 |目标检测 |
 | 《Fast R-CNN》 |目标检测 |
 | 《Rich feature hierarchies for accurate object detection and semantic segmentation》 |目标检测 |
+| 《ImageNet Classification with Deep Convolutional Neural Networks》 |CNN |
+| 《Network In Network》 |CNN |
+| 《VERY DEEP CONVOLUTIONAL NETWORKS FOR LARGE-SCALE IMAGE RECOGNITION》 |CNN |
+| 《Going deeper with convolutions》 |CNN |
+| 《Deep Residual Learning for Image Recognition》 |CNN |
+| 《Deep Residual Learning for Image Recognition》 |CNN |
+| 《Aggregated Residual Transformations for Deep Neural Networks》 |CNN |
+| 《FRACTALNET:ULTRA-DEEP NEURAL NETWORKS WITHOUT RESIDUALS》 |CNN |
+| 《Finding Structure in Time 》 |RNN |
 | 《A State-of-the-Art Survey on Deep Learning Theory and Architectures》 |机器学习&深度学习综述 |
 | 《Deep Learning》 |机器学习&深度学习综述 |
 | 《learning internal representation by error propagation》 |DNN |
@@ -257,22 +278,7 @@
 | 《Deep Double Descent: Where Bigger Models and More Data Hurt》 |其他 |
 | 《中文信息处理发展报告》 |其他 |
 | 《Modern Deep Learning Techniques Applied to Natural Language Processing》 |其他 |
-| 《ImageNet Classification with Deep Convolutional Neural Networks》 |CNN |
-| 《Network In Network》 |CNN |
-| 《VERY DEEP CONVOLUTIONAL NETWORKS FOR LARGE-SCALE IMAGE RECOGNITION》 |CNN |
-| 《Going deeper with convolutions》 |CNN |
-| 《Deep Residual Learning for Image Recognition》 |CNN |
-| 《Deep Residual Learning for Image Recognition》 |CNN |
-| 《Aggregated Residual Transformations for Deep Neural Networks》 |CNN |
-| 《FRACTALNET:ULTRA-DEEP NEURAL NETWORKS WITHOUT RESIDUALS》 |CNN |
-| 《Finding Structure in Time 》 |RNN |
-| 《PointNet: Deep Learning on Point Sets for 3D Classification and Segmentation》 |3D视觉 |
-| 《Moire Photo Restoration Using Multiresolution Convolutional Neural Networks》 |图像增强/去噪/生成 |
-| 《TextAttack: A Framework for Adversarial Attacks, Data Augmentation, and Adversarial Training in NLP》 |对抗攻击 |
-| 《UNIMO: Towards Unified-Modal Understanding and Generation via Cross-Modal Contrastive Learning》 |多模态 |
-| 《DeepFace: Closing the Gap to Human-Level Performance in Face Verification》 |人脸识别 |
-| 《End-to-End Text Recognition with Convolutional Neural Networks》 |OCR |
-| 《Fully Convolutional Networks for Semantic Segmentation》 |语义分割 |
+
 
 
 
