--- a/论文汇总.md
+++ b/论文汇总.md
@@ -3,7 +3,7 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
-| NULL |NULL |
+| 《TabTransformer: Tabular Data Modeling Using Contextual Embeddings》 |表格特征融合 |
 | 《See Better Before Looking Closer: Weakly Supervised Data Augmentation Network for Fine-Grained Visual Classification》 |数据增强 |
 |《Grad-CAM:Visual Explanations from Deep Networks via Gradient-based Localization》|模型可解释性|
 | 《PointNet: Deep Learning on Point Sets for 3D Classification and Segmentation》 |3D视觉 |
