--- a/通用信息抽取.md
+++ b/通用信息抽取.md
@@ -1,3 +1,3 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
-| NULL  | NULL |NULL |NULL |NULL |
+| 《Unified Structure Generation for Universal Information Extraction》  | ACL 2022 |1.百度UIE<br/> 2.基本架构：SSI+Text->SEL<br/> 3.核心技术：prompt+预训练 |NULL |NULL |
