--- a/命名实体识别.md
+++ b/命名实体识别.md
@@ -8,7 +8,8 @@
 | 《Neural Architectures for Named Entity Recognition》  | NAACL2016 |引用了余凯的论文，创新点：<br/>1输入从word变成char；<br/>2 双向lstm特征抽取后，融合了词典特征； |done |NULL |
 | 晶格网络/词表信息融合  | NULL |NULL |NULL |NULL |
 | 《Chinese NER Using Lattice LSTM》  | ACL2018 |晶格网络NER |done |NULL |
-| 《Simplify the Usage of Lexicon in Chinese NER》  | ACL2020 |融合词表信息：<br/>在输入层融合信息（需要注意特征的形式，有些反直观）； |done |NULL |
+| 《Simplify the Usage of Lexicon in Chinese NER》  | ACL2020 |融合词表信息：<br/>垂直方向将词表信息融合给原始query； |done |复旦-黄萱菁作品 |
+| 《FLAT: Chinese NER Using Flat-Lattice Transformer》| ACL2020 |融合词表信息：<br/>1.词表直接拼接到query上<br/>2.增加位置编码信息 |NULL |复旦-黄萱菁作品 |
 | 《Learning Named Entity Tagger using Domain-Specific Dictionary》  | Arxiv2018 |AutoNER：<br/>利用了带类别信息的词表和没类别信息的词表（分词信息） |done |NULL |
 | 实体Typing  | NULL |NULL |NULL |NULL |
 | 《Neural Architectures for Fine-grained Entity Type Classification》  | ACL2017 |实体Typing：<br/>融合手动特征；<br/>融合层次信息； |done |NULL |
